fix the alignment for the opinion

--- a/assets/style.css
+++ b/assets/style.css
@@ -78,3 +78,7 @@ a:hover{
 	border:none;
 	cursor: pointer;
 }
+
+.minis {
+	min-width: 500px;
+}
